--- a/package.json
+++ b/package.json
@@ -20,18 +20,21 @@
     "@angular/platform-browser": "^6.1.0",
     "@angular/platform-browser-dynamic": "^6.1.0",
     "@angular/router": "^6.1.0",
+    "@swimlane/ngx-charts": "^9.0.0",
     "core-js": "^2.5.4",
-    "firebase": "^5.5.1",
-    "rxjs": "~6.2.0",
+    "firebase": "^5.5.2",
+    "latest": "^0.2.0",
+    "rxjs": "^6.3.3",
+    "tslib": "^1.9.3",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.8.0",
-    "@angular/cli": "~6.2.2",
+    "@angular-devkit/build-angular": "^0.8.4",
+    "@angular/cli": "^6.2.4",
     "@angular/compiler-cli": "^6.1.0",
     "@angular/language-service": "^6.1.0",
-    "@types/jasmine": "~2.8.8",
-    "@types/jasminewd2": "~2.0.3",
+    "@types/jasmine": "^2.8.9",
+    "@types/jasminewd2": "^2.0.5",
     "@types/node": "~8.9.4",
     "codelyzer": "~4.3.0",
     "jasmine-core": "~2.99.1",
