--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "^6.1.0",
     "@angular/platform-browser-dynamic": "^6.1.0",
     "@angular/router": "^6.1.0",
+    "@ngui/auto-complete": "^2.0.0",
     "@swimlane/ngx-charts": "^9.0.0",
     "core-js": "^2.5.4",
     "firebase": "^5.5.2",
